--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,7 @@ nav li a {
     flex-direction: column;
     gap: 10px;
     padding: 20px 30px 20px 0px;
+    width: 100%;
 }
 
 .ed-title,
@@ -259,18 +260,78 @@ nav li a {
     font-size: 16px;
 }
 
-.field{
+.field {
 
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 600;
 }
 
-.info{
+.info {
     font-size: 12px;
-    
+
 }
 
 .ed-container-title,
 .exp-container-title {
     padding-left: 20px;
+}
+
+/* footer styles */
+footer {
+    display: flex;
+    /* align-items: center;
+    justify-content: space-around; */
+    flex-wrap: wrap;
+    padding: 100px 130px;
+    gap: 60px;
+}
+.links{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+.footer-column {
+    width: 45%;
+    display: flex;
+    align-items: flex-start;
+    justify-content:flex-start;
+    flex-direction: column;
+    gap: 30px;
+}
+.footer-column h3{
+    margin: 0;
+}
+.footer-column p{
+    font-size: 12px;
+}
+#name,#email,#message{
+    padding: 10px 20px;
+    border: none;
+    width:250px;
+}
+label{
+    display: block;
+    margin: 10px 0px;
+}
+form{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+}
+input:focus{
+    border: none;
+}
+.copyright{
+   
+    margin: auto;
+    padding: 20px;
+    font-size: 10px;
+}
+hr{
+    
+    color: #828181;
+    text-align: center;
+    margin: auto;
 }
